// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BookingForm /> should render correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="sc-crrtmM hShWtl"
      >
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check in
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-in"
            max="Invalid date"
            min="2023-12-22"
            name="checkIn"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check out
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-out"
            min="2023-12-23"
            name="checkOut"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Number of guests
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-qty-guests"
            max="4"
            min="1"
            name="qtyGuests"
            type="number"
            value=""
          />
        </div>
        <button
          class="sc-jrAGKZ cntfQH"
        >
          Check Availability
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="sc-crrtmM hShWtl"
    >
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Check in
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-check-in"
          max="Invalid date"
          min="2023-12-22"
          name="checkIn"
          type="date"
          value=""
        />
      </div>
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Check out
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-check-out"
          min="2023-12-23"
          name="checkOut"
          type="date"
          value=""
        />
      </div>
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Number of guests
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-qty-guests"
          max="4"
          min="1"
          name="qtyGuests"
          type="number"
          value=""
        />
      </div>
      <button
        class="sc-jrAGKZ cntfQH"
      >
        Check Availability
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<BookingForm /> should render the defined title 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="sc-crrtmM hShWtl"
      >
        <h3
          class="sc-dQpIV fPWcU"
        >
          Booking
        </h3>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check in
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-in"
            max="Invalid date"
            min="2023-12-22"
            name="checkIn"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check out
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-out"
            min="2023-12-23"
            name="checkOut"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Number of guests
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-qty-guests"
            max="4"
            min="1"
            name="qtyGuests"
            type="number"
            value=""
          />
        </div>
        <button
          class="sc-jrAGKZ cntfQH"
        >
          Check Availability
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="sc-crrtmM hShWtl"
    >
      <h3
        class="sc-dQpIV fPWcU"
      >
        Booking
      </h3>
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Check in
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-check-in"
          max="Invalid date"
          min="2023-12-22"
          name="checkIn"
          type="date"
          value=""
        />
      </div>
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Check out
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-check-out"
          min="2023-12-23"
          name="checkOut"
          type="date"
          value=""
        />
      </div>
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Number of guests
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-qty-guests"
          max="4"
          min="1"
          name="qtyGuests"
          type="number"
          value=""
        />
      </div>
      <button
        class="sc-jrAGKZ cntfQH"
      >
        Check Availability
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<BookingForm /> should render the specified date on the check-in input 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="sc-crrtmM hShWtl"
      >
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check in
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-in"
            max="Invalid date"
            min="2023-12-22"
            name="checkIn"
            type="date"
            value="2023-12-19"
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check out
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-out"
            min="2023-12-20"
            name="checkOut"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Number of guests
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-qty-guests"
            max="4"
            min="1"
            name="qtyGuests"
            type="number"
            value=""
          />
        </div>
        <button
          class="sc-jrAGKZ cntfQH"
        >
          Check Availability
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="sc-crrtmM hShWtl"
    >
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Check in
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-check-in"
          max="Invalid date"
          min="2023-12-22"
          name="checkIn"
          type="date"
          value="2023-12-19"
        />
      </div>
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Check out
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-check-out"
          min="2023-12-20"
          name="checkOut"
          type="date"
          value=""
        />
      </div>
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Number of guests
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-qty-guests"
          max="4"
          min="1"
          name="qtyGuests"
          type="number"
          value=""
        />
      </div>
      <button
        class="sc-jrAGKZ cntfQH"
      >
        Check Availability
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<BookingForm /> should render the specified date on the check-out input 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="sc-crrtmM hShWtl"
      >
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check in
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-in"
            max="2023-12-18"
            min="2023-12-22"
            name="checkIn"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check out
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-out"
            min="2023-12-23"
            name="checkOut"
            type="date"
            value="2023-12-19"
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Number of guests
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-qty-guests"
            max="4"
            min="1"
            name="qtyGuests"
            type="number"
            value=""
          />
        </div>
        <button
          class="sc-jrAGKZ cntfQH"
        >
          Check Availability
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="sc-crrtmM hShWtl"
    >
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Check in
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-check-in"
          max="2023-12-18"
          min="2023-12-22"
          name="checkIn"
          type="date"
          value=""
        />
      </div>
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Check out
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-check-out"
          min="2023-12-23"
          name="checkOut"
          type="date"
          value="2023-12-19"
        />
      </div>
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Number of guests
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-qty-guests"
          max="4"
          min="1"
          name="qtyGuests"
          type="number"
          value=""
        />
      </div>
      <button
        class="sc-jrAGKZ cntfQH"
      >
        Check Availability
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<BookingForm /> should render the specified value on the number of guests input 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="sc-crrtmM hShWtl"
      >
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check in
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-in"
            max="Invalid date"
            min="2023-12-22"
            name="checkIn"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Check out
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-check-out"
            min="2023-12-23"
            name="checkOut"
            type="date"
            value=""
          />
        </div>
        <div
          class="sc-jSguLX klDGSv"
        >
          <label
            class="sc-gKsecS dRZBKP"
            data-testid="label"
          >
            Number of guests
          </label>
          <input
            class="sc-iBPTVF YEbKX"
            data-testid="input-qty-guests"
            max="4"
            min="1"
            name="qtyGuests"
            type="number"
            value="1"
          />
        </div>
        <button
          class="sc-jrAGKZ cntfQH"
        >
          Check Availability
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="sc-crrtmM hShWtl"
    >
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Check in
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-check-in"
          max="Invalid date"
          min="2023-12-22"
          name="checkIn"
          type="date"
          value=""
        />
      </div>
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Check out
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-check-out"
          min="2023-12-23"
          name="checkOut"
          type="date"
          value=""
        />
      </div>
      <div
        class="sc-jSguLX klDGSv"
      >
        <label
          class="sc-gKsecS dRZBKP"
          data-testid="label"
        >
          Number of guests
        </label>
        <input
          class="sc-iBPTVF YEbKX"
          data-testid="input-qty-guests"
          max="4"
          min="1"
          name="qtyGuests"
          type="number"
          value="1"
        />
      </div>
      <button
        class="sc-jrAGKZ cntfQH"
      >
        Check Availability
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
